--- a/index.html
+++ b/index.html
@@ -4,64 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>おうちごはん, LifeLogix, TED to English & 論語ポケット - iPhoneアプリ</title>
+    <title>箱根ガイド</title>
     <link rel="stylesheet" href="style.css"> <!-- CSSファイルへのリンク -->
 </head>
 
 <body>
     <header>
-        <h1>おうちごはん, LifeLogix, TED to English & 論語ポケット</h1>
-        <p>毎日の食事、ライフログ、英単語学習、古典の智慧を簡単に手元に。</p>
+        <h1>箱根ガイドh</h1>
+        <p>箱根旅行をもっと楽しく</p>
     </header>
 
      <section id="app-features">
-        <h2>おうちごはんの特徴</h2>
+        <h2>箱根ガイドの特徴</h2>
         <ul>
-            <li>毎日の朝食、昼食、夕食の献立を簡単に計画できます。</li>
-            <li>お気に入りのメニューをマイメニューとして保存できます。</li>
-            <li>参考にしたレシピサイトのURLを保存し、評価も登録できます。</li>
-            <li>献立予定表からマイメニューを選ぶことができます。</li>
-            <li>必要な食材を買い物リストに追加し、管理が簡単です。</li>
-        </ul>
-    </section>
-
-    <section id="lifelogix-features">
-        <h2>LifeLogixの特徴</h2>
-        <ul>
-            <li>日常の活動や出来事を簡単に記録できます。</li>
-            <li>カレンダー機能で過去のログを一目で確認。</li>
-            <li>カテゴリ別にログを分類し、検索も簡単。</li>
-            <li>写真やメモを追加して、思い出を豊かに保存。</li>
-            <li>統計機能でライフログのトレンドを分析。</li>
-        </ul>
-    </section>
-    
-    <section id="flashlingo-features">
-        <h2>TED to Englishの特徴</h2>
-        <ul>
-            <li>TEDで楽しく英語を学習</li>
-            <li>自分が話す時によく使う単語やフレーズを効率的に学習。</li>
-            <li>ネイティブがよく使う単語やフレーズをヒアリングの強化のために学習。</li>
-            <li>単語帳のリストを別画面から確認・管理が可能。</li>
-            <li>日常英会話のスキルアップに最適なアプリ。</li>
-        </ul>
-    </section>
-
-    <section id="lunyupo-pocket-features">
-        <h2>論語ポケットの特徴</h2>
-        <ul>
-            <li>論語の各章の名言とその現代語訳を手のひらに。</li>
-            <li>名言の背景や意味を深く理解するための詳細解説。</li>
-            <li>日常の中で古典の知恵を気軽に取り入れることができます。</li>
-            <li>悩みや迷いの時に、孔子や彼の弟子たちの言葉に耳を傾ける。</li>
-            <li>古典を現代の日常生活に生かすツールとしての提供。</li>
+            <li>地図上で評判のレストランを簡単に検索できます。</li>
+            <li>地図上で評価の高いホテルを検索できます。</li>
+            <li>温泉やアクティビティも地図上表示や一覧表示で簡単にお気に入りを探せます。</li>
         </ul>
     </section>
 
     <footer>
-        <p>&copy; 2023 Takayuki Hashimoto. All rights reserved.<a href="privacy-policy.html">プライバシーポリシー</a></p>
+        <p>&copy; 2024 Chihiro Hashimoto. All rights reserved.<a href="privacy-policy.html">プライバシーポリシー</a></p>
         <p>Contact/お問合せ</p>
-        <p>以下のメールアドレスにお問い合わせください： <a href="mailto:shimoshimoto@gmail.com">shimoshimoto@gmail.com</a></p>
+        <p>以下のメールアドレスにお問い合わせください： <a href="mailto:hashi3929@gmail.com">hashi3929@gmail.com</a></p>
     </footer>
 
     <script src="path/to/your/js/script.js"></script> <!-- JavaScriptファイルへのリンク -->
